--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,10 @@
 <link rel="stylesheet" href="{{ site.url }}/assets/style.css"/>
 <link rel="stylesheet" href="{{ site.url }}/assets/js/lity.min.css"/>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
+
 {% if site.favicon != nil %}
 <link rel='shortcut icon' type='image/x-icon' href='{{ site.favicon }}' />
 {% endif %}
