--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -277,8 +277,8 @@
 // FONTS
 :root{
 
-    --f-header: Roboto;
-    --f-text: Roboto Slab;
+    --f-header: 'Nanum Gothic', sans-serif;
+    --f-text: 'IBM Plex Sans KR', sans-serif;
 }
 
 // FIXED SIZES
