--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Nanum+Gothic:wght@700&display=swap" rel="stylesheet">
 
 {% if site.favicon != nil %}
 <link rel='shortcut icon' type='image/x-icon' href='{{ site.favicon }}' />
